add: ocr and fix dokumentasi
